--- a/login.html
+++ b/login.html
@@ -64,7 +64,7 @@
     }
 
     .glass-card input {
-      width: 100%;
+      width: 92%;
       padding: 12px 14px;
       margin: 10px 0;
       border: none;
@@ -143,6 +143,7 @@
       left: 0;
       width: 100%;
     }
+    
   </style>
 </head>
 <body>
@@ -157,7 +158,7 @@
       <h2>Welcome back</h2>
       <p>Please enter your register number & password to sign in.</p>
       <form>
-        <input type="text" placeholder="Register Number" required>
+        <input type="text" placeholder="Register Number" required class="CARDINPUT">
         <input type="password" placeholder="Password" required>
         <button type="submit" class="btn">Sign In</button>
       </form>
